project(type_query LANGUAGES CXX)

add_executable(type_query_x86 x86.cpp)
target_compile_options(type_query_x86 PRIVATE ${UNIT_TESTS_WARNING_FLAGS})
target_include_directories(type_query_x86 PRIVATE ${UNIT_TESTS_INCLUDES})
target_link_libraries(type_query_x86 PRIVATE Dyninst::common)
add_test(NAME machregister_type_query_x86 COMMAND type_query_x86)

add_executable(type_query_x86_64 x86_64.cpp)
target_compile_options(type_query_x86_64 PRIVATE ${UNIT_TESTS_WARNING_FLAGS})
target_include_directories(type_query_x86_64 PRIVATE ${UNIT_TESTS_INCLUDES})
target_link_libraries(type_query_x86_64 PRIVATE Dyninst::common)
add_test(NAME machregister_type_query_x86_64 COMMAND type_query_x86_64)

add_executable(type_query_ppc64 ppc64.cpp)
target_compile_options(type_query_ppc64 PRIVATE ${UNIT_TESTS_WARNING_FLAGS})
target_include_directories(type_query_ppc64 PRIVATE ${UNIT_TESTS_INCLUDES})
target_link_libraries(type_query_ppc64 PRIVATE Dyninst::common)
add_test(NAME machregister_type_query_ppc64 COMMAND type_query_ppc64)

add_executable(type_query_ppc32 ppc32.cpp)
target_compile_options(type_query_ppc32 PRIVATE ${UNIT_TESTS_WARNING_FLAGS})
target_include_directories(type_query_ppc32 PRIVATE ${UNIT_TESTS_INCLUDES})
target_link_libraries(type_query_ppc32 PRIVATE Dyninst::common)
add_test(NAME machregister_type_query_ppc32 COMMAND type_query_ppc32)

add_executable(type_query_aarch64 aarch64.cpp)
target_compile_options(type_query_aarch64 PRIVATE ${UNIT_TESTS_WARNING_FLAGS})
target_include_directories(type_query_aarch64 PRIVATE ${UNIT_TESTS_INCLUDES})
target_link_libraries(type_query_aarch64 PRIVATE Dyninst::common)
add_test(NAME machregister_type_query_aarch64 COMMAND type_query_aarch64)

add_executable(type_query_amdgpu_gfx908 amdgpu_gfx908.cpp)
target_compile_options(type_query_amdgpu_gfx908 PRIVATE ${UNIT_TESTS_WARNING_FLAGS})
target_include_directories(type_query_amdgpu_gfx908 PRIVATE ${UNIT_TESTS_INCLUDES})
target_link_libraries(type_query_amdgpu_gfx908 PRIVATE Dyninst::common)
add_test(NAME machregister_type_query_amdgpu_gfx908 COMMAND type_query_amdgpu_gfx908)

add_executable(type_query_amdgpu_gfx90a amdgpu_gfx90a.cpp)
target_compile_options(type_query_amdgpu_gfx90a PRIVATE ${UNIT_TESTS_WARNING_FLAGS})
target_include_directories(type_query_amdgpu_gfx90a PRIVATE ${UNIT_TESTS_INCLUDES})
target_link_libraries(type_query_amdgpu_gfx90a PRIVATE Dyninst::common)
add_test(NAME machregister_type_query_amdgpu_gfx90a COMMAND type_query_amdgpu_gfx90a)
